--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-intent-extras",
+  "name": "react-native-intent",
   "version": "0.1.0",
   "description": "library to work on native intents",
   "main": "./lib/module/index.js",
@@ -79,7 +79,7 @@
     "prettier": "^3.0.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-builder-bob": "^0.40.8",
+    "react-native-builder-bob": "0.20.0",
     "release-it": "^17.10.0",
     "turbo": "^1.10.7",
     "typescript": "^5.8.3"
